--- a/Inkless.vcxproj
+++ b/Inkless.vcxproj
@@ -77,12 +77,12 @@
       <PreprocessorDefinitions>SFML_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\codage\Langages\SFML-lib\SFML-3.0.1-vc\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\codage\Langages\SFML-lib\SFML-3.0.1-vc\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;opengl32.lib;freetype.lib;sfml-system-s-d.lib;winmm.lib; gdi32.lib;sfml-system-s-d.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;user32.lib;advapi32.lib;shell32.lib;ole32.lib;uuid.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -94,25 +94,27 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>SFML_STATIC</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\codage\Langages\SFML-lib\SFML-3.0.1-vc\include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\codage\Langages\SFML-lib\SFML-3.0.1-vc\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;opengl32.lib;freetype.lib;sfml-system-s-d.lib;winmm.lib; gdi32.lib;sfml-system-s-d.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;user32.lib;advapi32.lib;shell32.lib;ole32.lib;uuid.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -122,12 +124,16 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\ELITEBOOK\Desktop\codage\languages\sfml\lib\SFML-3.0.1\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;opengl32.lib;freetype.lib;sfml-system-s-d.lib;winmm.lib; gdi32.lib;sfml-system-s-d.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;user32.lib;advapi32.lib;shell32.lib;ole32.lib;uuid.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -147,6 +153,9 @@
   <ItemGroup>
     <Image Include="ground.png" />
     <Image Include="ground2.png" />
+    <Image Include="rock.png" />
+    <Image Include="squid_player.png" />
+    <Image Include="squid_jump.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
